--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,16 +1,18 @@
-name: CI/CD build
+name: CI/CD build for 5.0.x
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "5.0.x" ]
 
 jobs:
   build:
-    name: Build Main branch
+    name: Build 5.0.x branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+        with:
+          ref: '5.0.x'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
