--- a/build.gradle
+++ b/build.gradle
@@ -48,20 +48,20 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.31-SNAPSHOT'
+		springVersionDefault = '5.3.31'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.5-SNAPSHOT'
-		springAmqpVersion = '2.3.17-SNAPSHOT'
-		springDataCommonsVersion = '2.7.18-SNAPSHOT'
-		springDataGeodeVersion = '2.7.18-SNAPSHOT'
-		springDataJpaVersion = '2.7.18-SNAPSHOT'
-		springDataMongodbVersion = '3.4.18-SNAPSHOT'
-		springIntegrationVersion = '5.5.20-SNAPSHOT'
-		springKafkaVersion = '2.9.14-SNAPSHOT'
-		springLdapVersion = '2.4.2-SNAPSHOT'
-		micrometerVersion = '1.9.17-SNAPSHOT'
+		springRetryVersion = '1.3.4'
+		springAmqpVersion = '2.3.16'
+		springDataCommonsVersion = '2.7.18'
+		springDataGeodeVersion = '2.7.18'
+		springDataJpaVersion = '2.7.18'
+		springDataMongodbVersion = '3.4.18'
+		springIntegrationVersion = '5.5.20'
+		springKafkaVersion = '2.9.13'
+		springLdapVersion = '2.4.1'
+		micrometerVersion = '1.9.17'
 
-		activemqVersion = '5.15.15'
+		activemqVersion = '5.15.16'
 		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.9.1'
 		commonsDdbcpVersion = '2.9.0'
@@ -89,7 +89,7 @@ allprojects {
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.8.2'
 		log4jVersion = '2.19.0'
-		mysqlVersion = '8.0.32'
+		mysqlVersion = '8.0.33'
 		mockitoVersion = '3.12.4'
 		postgresqlVersion = '42.2.27'
 		quartzVersion = '2.3.2'
@@ -107,7 +107,7 @@ allprojects {
 		assertjVersion='3.23.1'
 		mongoDbDriverSyncVersion='4.6.1' // used only in tests and samples
 		testcontainersVersion='1.17.6'
-		neo4jVersion='3.2.39'
+		neo4jVersion='3.2.43'
 	}
 
 	apply plugin: 'idea'
