--- a/pom.xml
+++ b/pom.xml
@@ -61,18 +61,18 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.14-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>2.0.4-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.9-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.13-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.0.14</spring-framework.version>
+		<spring-retry.version>2.0.4</spring-retry.version>
+		<spring-integration.version>6.0.9</spring-integration.version>
+		<micrometer.version>1.10.13</micrometer.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-commons.version>3.0.12-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.12-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.12-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.13-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.10-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.6-SNAPSHOT</spring-ldap.version>
+		<spring-data-commons.version>3.0.12</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.12</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.12</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.13</spring-kafka.version>
+		<spring-amqp.version>3.0.10</spring-amqp.version>
+		<spring-ldap.version>3.0.6</spring-ldap.version>
 
 		<jackson.version>2.14.3</jackson.version>
 		<avro.version>1.9.2</avro.version> <!-- FIXME build failure with version 1.11.1 -->
@@ -83,7 +83,7 @@
 		<jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
-		<neo4j-ogm-core.version>4.0.5</neo4j-ogm-core.version>
+		<neo4j-ogm-core.version>4.0.8</neo4j-ogm-core.version>
 		<mongodb-driver-sync.version>4.9.1</mongodb-driver-sync.version>
 		<junit-jupiter.version>5.9.3</junit-jupiter.version>
 
@@ -91,42 +91,42 @@
 		<jsr305.version>3.0.2</jsr305.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.1.7-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.1.7</micrometer-tracing.version>
 
 		<xstream.version>1.4.20</xstream.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.24.2</assertj.version>
-		<mockito.version>5.5.0</mockito.version>
+		<mockito.version>5.7.0</mockito.version>
 		<xmlunit.version>2.9.1</xmlunit.version>
-		<commons-io.version>2.13.0</commons-io.version>
-		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
-		<slf4j.version>2.0.7</slf4j.version>
+		<commons-io.version>2.15.0</commons-io.version>
+		<commons-dbcp2.version>2.11.0</commons-dbcp2.version>
+		<slf4j.version>2.0.9</slf4j.version>
 		<hsqldb.version>2.7.2</hsqldb.version>
-		<h2.version>2.2.220</h2.version>
-		<sqlite.version>3.42.0.0</sqlite.version>
+		<h2.version>2.2.224</h2.version>
+		<sqlite.version>3.44.0.0</sqlite.version>
 		<derby.version>10.16.1.1</derby.version>
-		<hana.version>2.16.14</hana.version>
-		<artemis.version>2.30.0</artemis.version>
-		<jaxb-core.version>4.0.3</jaxb-core.version>
-		<log4j.version>2.20.0</log4j.version>
+		<hana.version>2.18.13</hana.version>
+		<artemis.version>2.31.2</artemis.version>
+		<jaxb-core.version>4.0.4</jaxb-core.version>
+		<log4j.version>2.22.0</log4j.version>
 		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
 		<jakarta.el-api.version>5.0.1</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
 		<jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
-		<jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
+		<jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
 		<angus-mail.version>2.0.2</angus-mail.version>
 		<woodstox-core.version>6.5.1</woodstox-core.version>
-		<aspectj.version>1.9.20</aspectj.version>
-		<mysql-connector-j.version>8.1.0</mysql-connector-j.version>
-		<mariadb-java-client.version>3.1.4</mariadb-java-client.version>
-		<postgresql.version>42.6.0</postgresql.version>
+		<aspectj.version>1.9.20.1</aspectj.version>
+		<mysql-connector-j.version>8.2.0</mysql-connector-j.version>
+		<mariadb-java-client.version>3.3.0</mariadb-java-client.version>
+		<postgresql.version>42.7.0</postgresql.version>
 		<db2.version>11.5.8.0</db2.version>
-		<oracle.version>19.20.0.0</oracle.version>
+		<oracle.version>19.21.0.0</oracle.version>
 		<sqlserver.version>11.2.3.jre17</sqlserver.version>
 		<jtds.version>1.3.1</jtds.version>
-		<testcontainers.version>1.19.0</testcontainers.version>
+		<testcontainers.version>1.19.3</testcontainers.version>
 		<jsonassert.version>1.5.1</jsonassert.version>
 
 		<!-- samples dependencies -->
@@ -144,7 +144,7 @@
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
 		<maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
-		<maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
+		<maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
