--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -17,25 +17,16 @@ jobs:
         with:
           ref: '4.3.x'
 
-      - name: Set up Gradle
-        uses: spring-io/spring-gradle-build-action@6efab5a8a19abb6f42ee20e9d6207859bf2fca02 # v2.0.1
+      - name: Set up JDK 8
+        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
         with:
           java-version: '8'
           distribution: 'adopt'
 
-      - name: Setup JFrog Cli
-        uses: jfrog/setup-jfrog-cli@901bb9632db90821c2d3f076012bdeaf66598555 # v3.4.1
+      - name: Build the project and deploy to Artifactory
         env:
-          JF_ENV_SPRING: ${{ secrets.JF_ARTIFACTORY_SPRING }}
-
-      - name: Configure JFrog Cli
+          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
+          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
         run: |
-          jf gradlec \
-            --use-wrapper \
-            --repo-deploy libs-snapshot-local
-          echo JFROG_CLI_BUILD_NAME=${{ github.event.repository.name }}-${{ github.ref_name }} >> $GITHUB_ENV
-          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
-
-      - name: Build the project
-        run: |
-          jf gradle clean build -x asciidoc -x asciidoctorPdf -x dist -Palltests --parallel --stacktrace --info
+          ./gradlew clean build --parallel --stacktrace --info
+          ./gradlew artifactoryPublish
