Use JFrog Cli to upload files to Artifactory

--- a/.github/release-files-spec.json
+++ b/.github/release-files-spec.json
@@ -7,7 +7,7 @@
             {
               "@build.name": "${buildname}",
               "@build.number": "${buildnumber}",
-              "path": {"$match": "org*"}
+              "path": {"$match": "org/springframework/batch*"}
             },
             {
               "$or": [
