--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -17,15 +17,11 @@ jobs:
         with:
           ref: '4.3.x'
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@387ac29b308b003ca37ba93a6cab5eb57c8f5f93 # v4.0.0
+      - name: Set up Gradle
+        uses: spring-io/spring-gradle-build-action@6efab5a8a19abb6f42ee20e9d6207859bf2fca02 # v2.0.1
         with:
           java-version: '8'
           distribution: 'adopt'
-
-      - name: Build the project
-        run: |
-          ./gradlew clean build install --parallel --stacktrace --info
 
       - name: Setup JFrog Cli
         uses: jfrog/setup-jfrog-cli@901bb9632db90821c2d3f076012bdeaf66598555 # v3.4.1
@@ -34,12 +30,11 @@ jobs:
 
       - name: Configure JFrog Cli
         run: |
-          jf gradlec --use-wrapper --repo-deploy libs-snapshot-local
+          jf gradlec --repo-deploy libs-snapshot-local
           echo JFROG_CLI_BUILD_NAME=${{ github.event.repository.name }}-${{ github.ref_name }} >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
 
-      - name: Deploy to Artifactory
+      - name: Build the project and Deploy to Artifactory
         run: |
-          jf rt upload \
-            --spec .github/release-files-spec.json \
-            --spec-vars "buildname=$JFROG_CLI_BUILD_NAME;buildnumber=$JFROG_CLI_BUILD_NUMBER"
+          jf gradle build artifactoryPublish --parallel --stacktrace --info
+          jf rt build-publish
