--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -36,5 +36,5 @@ jobs:
 
       - name: Build the project and Deploy to Artifactory
         run: |
-          jf gradle build artifactoryPublish --parallel --stacktrace --info
+          jf gradle build install artifactoryPublish --parallel --stacktrace --info
           jf rt build-publish
