--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -36,6 +36,5 @@ jobs:
 
       - name: Build the project and Deploy to Artifactory
         run: |
-          jf gradle build install --parallel
-          jf gradle artifactoryPublish --debug
+          jf gradle build install artifactoryPublish
           jf rt build-publish
