--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Extract project version
         run: |
           echo PROJECT_VERSION=$(./gradlew properties | grep version | cut -d: -f2 | awk '{$1=$1};1') >> $GITHUB_ENV
+          echo \"$PROJECT_VERSION\"
 
       - name: Setup JFrog Cli
         uses: jfrog/setup-jfrog-cli@901bb9632db90821c2d3f076012bdeaf66598555 # v3.4.1
@@ -41,6 +42,7 @@ jobs:
       - name: Build the project and Deploy to Artifactory
         run: |
           jf gradle build install -x test
+          echo "Copying spring-batch-infrastructure/build/poms/pom-default.xml to spring-batch-infrastructure/build/libs/spring-batch-infrastructure-$PROJECT_VERSION.pom"
           cp spring-batch-infrastructure/build/poms/pom-default.xml spring-batch-infrastructure/build/libs/spring-batch-infrastructure-$PROJECT_VERSION.pom
           cp spring-batch-core/build/poms/pom-default.xml spring-batch-core/build/libs/spring-batch-core-$PROJECT_VERSION.pom
           cp spring-batch-test/build/poms/pom-default.xml spring-batch-test/build/libs/spring-batch-test-$PROJECT_VERSION.pom
