--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,23 @@ buildscript {
 	}
 }
 
-apply plugin: org.jfrog.gradle.plugin.artifactory.ArtifactoryPlugin
-
 plugins {
 	id 'org.sonarqube' version '2.6.2'
 	id 'org.asciidoctor.jvm.pdf' version '3.1.0'
 	id 'org.asciidoctor.jvm.gems' version '3.1.0'
 	id 'org.asciidoctor.jvm.convert' version '3.1.0'
+	id 'com.jfrog.artifactory' version '5.1.11'
 }
+
+artifactory {
+	publish {
+		defaults {
+			publications('ALL_PUBLICATIONS')
+		}
+	}
+}
+
+artifactoryPublish.skip = true
 
 ext {
 	linkHomepage = 'https://projects.spring.io/spring-batch/'
@@ -412,11 +421,13 @@ project('spring-batch-infrastructure') {
 project('spring-batch-docs') {
 	description = 'Spring Batch Docs'
 	project.tasks.findByPath("artifactoryPublish")?.enabled = false
+	artifactoryPublish.skip = true
 }
 
 project('spring-batch-core-tests') {
 	description = 'Spring Batch Core Tests'
     project.tasks.findByPath("artifactoryPublish")?.enabled = false
+	artifactoryPublish.skip = true
 	dependencies {
 		compile project(":spring-batch-core")
 		compile project(":spring-batch-infrastructure")
@@ -456,6 +467,7 @@ project('spring-batch-core-tests') {
 project('spring-batch-infrastructure-tests') {
 	description = 'Spring Batch Infrastructure Tests'
     project.tasks.findByPath("artifactoryPublish")?.enabled = false
+	artifactoryPublish.skip = true
 	dependencies {
 		compile project(":spring-batch-infrastructure")
 		compile "javax.jms:javax.jms-api:$jmsVersion"
@@ -586,6 +598,7 @@ project('spring-batch-integration') {
 project('spring-batch-samples') {
 	description = 'Batch Batch Samples'
     project.tasks.findByPath("artifactoryPublish")?.enabled = false
+	artifactoryPublish.skip = true
 
 	dependencies {
 
