--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Build the project and Deploy to Artifactory
         run: |
           jf gradle build install artifactoryPublish -x test
-          jf rt upload spring-batch-infrastructure/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-infrastructure/$PROJECT_VERSION/spring-batch-infrastructure-$PROJECT_VERSION.pom --module spring-batch-infrastructure
-          jf rt upload spring-batch-core/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-core/$PROJECT_VERSION/spring-batch-core-$PROJECT_VERSION.pom --module spring-batch-core
-          jf rt upload spring-batch-test/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-test/$PROJECT_VERSION/spring-batch-test-$PROJECT_VERSION.pom --module spring-batch-test
-          jf rt upload spring-batch-integration/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-integration/$PROJECT_VERSION/spring-batch-integration-$PROJECT_VERSION.pom --module spring-batch-integration
+          jf rt upload spring-batch-infrastructure/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-infrastructure/$PROJECT_VERSION/spring-batch-infrastructure-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-infrastructure:$PROJECT_VERSION
+          jf rt upload spring-batch-core/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-core/$PROJECT_VERSION/spring-batch-core-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-core:$PROJECT_VERSION
+          jf rt upload spring-batch-test/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-test/$PROJECT_VERSION/spring-batch-test-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-test:$PROJECT_VERSION
+          jf rt upload spring-batch-integration/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-integration/$PROJECT_VERSION/spring-batch-integration-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-integration:$PROJECT_VERSION
           jf rt build-publish
