--- a/.github/workflows/continuous-integration-43x.yml
+++ b/.github/workflows/continuous-integration-43x.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build the project and Deploy to Artifactory
         run: |
-          jf gradle build install artifactoryPublish -x test
+          jf gradle build install artifactoryPublish
           jf rt upload spring-batch-infrastructure/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-infrastructure/$PROJECT_VERSION/spring-batch-infrastructure-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-infrastructure:$PROJECT_VERSION
           jf rt upload spring-batch-core/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-core/$PROJECT_VERSION/spring-batch-core-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-core:$PROJECT_VERSION
           jf rt upload spring-batch-test/build/poms/pom-default.xml libs-snapshot-local/org/springframework/batch/spring-batch-test/$PROJECT_VERSION/spring-batch-test-$PROJECT_VERSION.pom --module org.springframework.batch:spring-batch-test:$PROJECT_VERSION
