--- a/.github/workflows/continuous-integration-51x.yml
+++ b/.github/workflows/continuous-integration-51x.yml
@@ -1,16 +1,18 @@
-name: CI/CD build
+name: CI/CD build for 5.1.x
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "5.1.x" ]
 
 jobs:
   build:
-    name: Build branch
+    name: Build 5.1.x branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+        with:
+          ref: '5.1.x'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -50,7 +52,8 @@ jobs:
           DOCS_HOST: ${{ secrets.DOCS_HOST }}
           DOCS_PATH: ${{ secrets.DOCS_PATH }}
           DOCS_USERNAME: ${{ secrets.DOCS_USERNAME }}
-        working-directory: spring-batch-docs
+        working-directory: spring-batch-docs/target
         run: |
-          cd target && unzip spring-batch-$PROJECT_VERSION-javadocs.zip
-          scp -i $HOME/.ssh/key -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION
+          unzip spring-batch-$PROJECT_VERSION-javadocs.zip
+          ssh -i $HOME/.ssh/key $DOCS_USERNAME@$DOCS_HOST cd $DOCS_PATH && mkdir -p $PROJECT_VERSION/api
+          scp -i $HOME/.ssh/key -r api $DOCS_USERNAME@$DOCS_HOST:$DOCS_PATH/$PROJECT_VERSION/api
