--- a/spring-batch-bom/pom.xml
+++ b/spring-batch-bom/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.5-SNAPSHOT</version>
+		<version>5.0.5</version>
 	</parent>
 	<artifactId>spring-batch-bom</artifactId>
 	<packaging>pom</packaging>
