--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.6</version>
+		<version>5.0.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>spring-batch-integration</artifactId>
 	<name>Spring Batch Integration</name>
